enhance customer management: add user authentication to create and update operations, implement SSN encryption, and introduce CustomerUpdateRequest DTO